name:                trex
version:             0.1.0.0
synopsis:            Simple transformation and extraction for data files.
license:             MIT
author:              Armando Blancas
maintainer:          abm221617@gmail.com
copyright:           (c) 2014 Armando Blancas
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable trex
  main-is:           Main.hs
  other-modules:     Quote, Fields, First, Shape, Select
  other-extensions:  OverloadedStrings, ScopedTypeVariables, QuasiQuotes, BangPatterns
  build-depends:     base,
                     cassava,
                     vector,
                     bytestring,
                     template-haskell,
                     text, 
                     regex-base,
                     regex-tdfa
  hs-source-dirs:    src
  default-language:  Haskell2010
